rename some files

--- a/web/index.html
+++ b/web/index.html
@@ -45,7 +45,7 @@
 
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/d3/3.2.2/d3.v3.min.js"></script>
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.1/underscore-min.js"></script>
-<script type="text/javascript" src="js/foobar.js"></script>
+<script type="text/javascript" src="js/parallel-coordinates.js"></script>
 </head>
 <body>
 
